public static class EnemyAnimatorConstants
{
    public static class States
    {
        public const string Dead = nameof(Dead);
        public const string RightMotion = nameof(RightMotion);
        public const string LeftMotion = nameof(LeftMotion);
        public const string DownMotion = nameof(DownMotion);
        public const string UpMotion = nameof(UpMotion);
    }
}